# Convert_Personalisation_to_MonoAlg3D

./: CMakeLists.txt  LICENSE  README.md
inputs/: rabbit_coarse_personalisation_individual_95_lat_surface.vtu  rabbit_coarse_personalisation_individual_95_root_nodes_with_lat.vtk
inputs/tunecv/: rabbit_inferred_individual_95_cvs.txt
outputs/tunecv/configs/: cable.ini
src/: main.cpp
src/calibration_library/: CMakeLists.txt  tunecv.cpp  tunecv.h
